--- a/accessible-tabs/package.json
+++ b/accessible-tabs/package.json
@@ -35,6 +35,7 @@
     "@types/jest": "^29.0.3",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
+    "@types/sanitize-html": "^2.6.2",
     "@types/styled-components": "^5.1.15",
     "babel-jest": "^29.0.3",
     "babel-plugin-styled-components": "^2.0.7",
@@ -44,6 +45,7 @@
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
     "react-test-renderer": "^18.2.0",
+    "sanitize-html": "^2.7.2",
     "typescript": "^4.4.3"
   }
 }
